fix(ux): 🐛 Search bar on mobile needs improvement #108 (#114)
* feat(ux): :sparkles: search input field is now focused when clicked (after animation)

* fix(ux): :bug: fix jumping menu (still to be improved with dedicated page)

* chore: :fire: removed unused imports

* chore: :fire: removed unused imports

--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -244,7 +244,7 @@
 @layer base {
 
     html {
-        @apply max-w-full overflow-x-hidden h-full
+        @apply max-w-full overflow-x-hidden h-full;
     }
 
     body {
@@ -417,11 +417,11 @@
     }
 
     .glassmorphism-lite {
-        @apply border border-solid border-accent-alpha-40 rounded-xl hover:border-accent active:border-accent focus:border-accent shadow-lg transition-all duration-300 hover:scale-102 bg-general-background;
+        @apply border border-solid border-accent-alpha-40 rounded-xl hover:border-accent active:border-accent focus:border-accent shadow-lg transition-transform duration-300 hover:scale-102 bg-general-background;
     }
 
     .glassmorphism {
-        @apply border border-solid border-accent-alpha-40 rounded-xl hover:border-accent active:border-accent focus:border-accent shadow-lg transition-all duration-300 hover:scale-102 backdrop-blur-sm;
+        @apply border border-solid border-accent-alpha-40 rounded-xl hover:border-accent active:border-accent focus:border-accent shadow-lg transition-transform duration-300 hover:scale-102 backdrop-blur-sm;
     }
 }
 
